appId: ${APP_ID}
---
- tapOn:
      id: 'CreateAccount.Amount'
- eraseText: 100
- inputText: ${NEW_BALANCE}
- extendedWaitUntil:
      visible:
          id: 'AccountForm.SubmitButton'
          enabled: true
      timeout: 3000
- tapOn:
      id: 'AccountForm.SubmitButton'
      enabled: true
      retryTapIfNoChange: true

- extendedWaitUntil:
      visible:
          id: 'HomePage.TotalBalance'
      timeout: 3000
