appId: ${APP_ID}
---
- tapOn:
      id: 'TransactionForm.CategorySelector.Title'
      waitToSettleTimeoutMs: 500
- extendedWaitUntil:
      visible:
          id: 'CategoryPickerBottomSheet.Input'
- tapOn:
      id: 'CategoryPickerBottomSheet.Input'
      waitToSettleTimeoutMs: 500
- inputText: ${CATEGORY_NAME}
- tapOn: Done
- waitForAnimationToEnd
- extendedWaitUntil:
      visible:
          id: 'CategoryPickerBottomSheet.Card.${CATEGORY_NAME}.Label'
      timeout: 15000
- tapOn:
      id: 'CategoryPickerBottomSheet.Card.${CATEGORY_NAME}.Label'
      retryTapIfNoChange: true
- extendedWaitUntil:
      notVisible:
          id: 'CategoryPickerBottomSheet.Input'
