appId: ${APP_ID}
---
- tapOn:
    id: 'TabBar.Home'
- extendedWaitUntil:
    visible:
      id: 'HomePage.TotalBalance'

- tapOn:
    id: 'TabBar.Settings'
- extendedWaitUntil:
    visible: 'Settings'

- scrollUntilVisible:
    element:
      id: 'SettingsPage.ManageCategoriesCard'
    direction: DOWN
    speed: 20
- waitForAnimationToEnd
- assertVisible:
    id: 'SettingsPage.ManageCategoriesCard'
- tapOn:
    id: 'SettingsPage.ManageCategoriesCard'
- extendedWaitUntil:
    visible:
      id: 'CategoryPage.SearchInput'

- tapOn:
    id: 'ActionButton'

- waitForAnimationToEnd

- tapOn: Category

- tapOn:
    id: CategoryForm.Input
- inputText: ${CATEGORY_NAME}

- tapOn: 'Create Category'
- tapOn:
    id: CategoryForm.Submit

- extendedWaitUntil:
    visible:
      id: 'CategoryCard.${CATEGORY_NAME}'
    timeout: 10000

- tapOn:
    id: 'TabBar.Settings'
