appId: ${APP_ID}
---
- runFlow: navigate-to-transactions.flow.yaml

- runFlow: open-action-menu.flow.yaml

- tapOn:
    id: 'ActionItem.Expense'
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: 'New Expense'

- tapOn: ${DIGIT_1}
- tapOn: ${DIGIT_2}

- runFlow:
    file: select-account.flow.yaml
    env:
      ACCOUNT_NAME: ${ACCOUNT_NAME}

- runFlow:
    file: select-category.flow.yaml
    env:
      CATEGORY_NAME: ${CATEGORY_NAME}

- runFlow:
    file: enter-comment.flow.yaml
    env:
      COMMENT: ${COMMENT}

- hideKeyboard
- tapOn:
    id: 'TransactionForm.SubmitButton'

- extendedWaitUntil:
    visible: 'Transactions'
    timeout: 15000
