appId: ${APP_ID}
---
- tapOn:
    id: 'TabBar.Home'
- extendedWaitUntil:
    visible:
      id: 'HomePage.TotalBalance'

- tapOn:
    id: 'TabBar.Settings'
- extendedWaitUntil:
    visible: 'Settings'

- scrollUntilVisible:
    element:
      id: 'SettingsPage.ManageTagsCard'
    direction: DOWN
    speed: 20
    centerElement: true
- waitForAnimationToEnd
- assertVisible:
    id: 'SettingsPage.ManageTagsCard'
- tapOn:
    id: 'SettingsPage.ManageTagsCard'
- extendedWaitUntil:
    visible:
      id: 'TagPage.SearchInput'

- tapOn:
    id: 'ActionButton'

- waitForAnimationToEnd

- tapOn: Tag

- tapOn:
    id: TagForm.Input
- inputText: ${TAG_NAME}

- tapOn: 'Create Tag'
- tapOn:
    id: TagForm.Submit

- extendedWaitUntil:
    visible:
      id: 'TagCard.${TAG_NAME}'
    timeout: 10000

- tapOn:
    id: 'TabBar.Settings'
