appId: ${APP_ID}
---
- runFlow: navigate-to-transactions.flow.yaml

- tapOn:
    id: 'ActionButton'
- extendedWaitUntil:
    visible:
      id: 'ActionItem.Transfer'
- waitForAnimationToEnd

- tapOn:
    id: 'ActionItem.Transfer'
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: 'New Transfer'

- tapOn: ${DIGIT_1}
- tapOn: ${DIGIT_2}

- tapOn:
    id: 'TransferForm.FromAccount'
- waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: 'AccountPickerBottomSheet.Input'
- tapOn:
    id: 'AccountPickerBottomSheet.Input'
- inputText: ${FROM_ACCOUNT}
- extendedWaitUntil:
    visible:
      id: 'AccountPickerBottomSheet.Option.${FROM_ACCOUNT}'
- tapOn:
    id: 'AccountPickerBottomSheet.Option.${FROM_ACCOUNT}'

- tapOn:
    id: 'TransferForm.ToAccount'
- waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: 'AccountPickerBottomSheet.Input'
- tapOn:
    id: 'AccountPickerBottomSheet.Input'
- inputText: ${TO_ACCOUNT}
- extendedWaitUntil:
    visible:
      id: 'AccountPickerBottomSheet.Option.${TO_ACCOUNT}'
- tapOn:
    id: 'AccountPickerBottomSheet.Option.${TO_ACCOUNT}'

- runFlow:
    file: enter-comment.flow.yaml
    env:
      COMMENT: ${COMMENT}

- hideKeyboard
- tapOn:
    id: 'TransactionForm.SubmitButton'

- extendedWaitUntil:
    visible: 'Transactions'
    timeout: 15000
