appId: ${APP_ID}
---
- tapOn:
    point: '80%,8%'
- extendedWaitUntil:
    visible:
      id: 'TransactionActionsMenu.DeleteButton'

- tapOn:
    id: 'TransactionActionsMenu.DeleteButton'

- extendedWaitUntil:
    visible: 'Are you sure?'
    timeout: 10000
- tapOn:
    point: '67%,56%'
- extendedWaitUntil:
    notVisible: 'Are you sure?'
    timeout: 15000
