appId: ${APP_ID}
env:
  FIXTURE_ROW_ID_MATCH: ${FIXTURE_ROW_ID_MATCH}
  HANDLE_DEV_CLIENT_STARTUP: ${HANDLE_DEV_CLIENT_STARTUP || 'false'}
---
- retry:
    maxRetries: 1
    commands:
      - openLink: 'budgie://settings?anchor=data'
      - runFlow:
          when:
            visible: 'Open'
          commands:
            - tapOn: 'Open'
      - extendedWaitUntil:
          visible:
            id: 'SettingsPage.ImportDatabaseCard'
          timeout: 15000

- tapOn:
    id: 'SettingsPage.ImportDatabaseCard'

- runFlow:
    file: select-file-from-app-provider.flow.yaml
    env:
      FILE_ROW_ID_MATCH: ${FIXTURE_ROW_ID_MATCH}

- runFlow:
    when:
      visible: 'Open'
    commands:
      - tapOn: 'Open'

- runFlow:
    when:
      visible: 'Importing a database will replace all current data.*|Beim Importieren einer Datenbank werden alle aktuellen Daten ersetzt.*'
    commands:
      - retry:
          maxRetries: 1
          commands:
            - tapOn:
                text: 'Import Database|Datenbank importieren'
                index: 1

- runFlow:
    file: relaunch-app.flow.yaml
    env:
      HANDLE_DEV_CLIENT_STARTUP: ${HANDLE_DEV_CLIENT_STARTUP}
