appId: ${APP_ID}
env:
    PDF_ROW_ID_MATCH: ${PDF_ROW_ID_MATCH}
    FILE_PICKER_INITIAL_SCROLL_SHIFT: ${FILE_PICKER_INITIAL_SCROLL_SHIFT}
    FILE_PICKER_SCROLL_SHIFT: ${FILE_PICKER_SCROLL_SHIFT}
---
- extendedWaitUntil:
      visible:
          id: 'CreateFileBankAccount.SelectFileButton'
      timeout: 10000

- tapOn:
      id: 'CreateFileBankAccount.SelectFileButton'
      retryTapIfNoChange: true

- runFlow:
      file: select-file-from-app-provider.flow.yaml
      env:
          FILE_ROW_ID_MATCH: ${PDF_ROW_ID_MATCH}
          FILE_PICKER_INITIAL_SCROLL_SHIFT: ${FILE_PICKER_INITIAL_SCROLL_SHIFT}
          FILE_PICKER_SCROLL_SHIFT: ${FILE_PICKER_SCROLL_SHIFT}

- extendedWaitUntil:
      visible:
          id: 'SyncAccountSelection.Row.Erste_EUR'
      timeout: 5000

- tapOn:
      id: 'SyncAccountSelection.Row.Erste_EUR'

- extendedWaitUntil:
      visible:
          id: 'CreateFileBankAccount.StartSyncButton'
      timeout: 15000

- tapOn:
      id: 'CreateFileBankAccount.StartSyncButton'
      retryTapIfNoChange: true

- runFlow:
      when:
          visible: 'Already syncing'
      commands:
          - tapOn:
                id: 'PageHeader.BackButton'

- extendedWaitUntil:
      visible:
          id: 'HomePage.TotalBalance'
      timeout: 60000
