appId: ${APP_ID}
---
- tapOn:
      id: 'BackButton'
      optional: true

- tapOn:
      id: 'BackButton'
      optional: true

- tapOn:
      id: 'BackButton'
      optional: true

- tapOn:
      text: 'Browse|Explorer|Durchsuchen|Examinar|Огляд'
      optional: true

- waitForAnimationToEnd

- runFlow:
      when:
          notVisible:
              text: 'budgie \(E2E\)'
      commands:
          - tapOn:
                id: 'BackButton'
                optional: true
          - waitForAnimationToEnd
          - tapOn:
                id: 'BackButton'
                optional: true
          - waitForAnimationToEnd

- runFlow:
      when:
          visible: 'Réessayer|Retry|Wiederholen|Reintentar|Повторити'
      commands:
          - tapOn:
                text: 'Réessayer|Retry|Wiederholen|Reintentar|Повторити'
          - waitForAnimationToEnd

- runFlow:
      when:
          notVisible:
              text: 'budgie \(E2E\)'
      commands:
          - runFlow:
                when:
                    visible: 'On My iPhone|Sur mon iPhone|Auf meinem iPhone|En mi iPhone|На iPhone'
                commands:
                    - tapOn:
                          text: 'On My iPhone|Sur mon iPhone|Auf meinem iPhone|En mi iPhone|На iPhone'
                    - waitForAnimationToEnd

- runFlow:
      when:
          notVisible:
              text: 'budgie \(E2E\)'
      commands:
          - scrollUntilVisible:
                element:
                    text: 'budgie \(E2E\)'
                direction: DOWN
                timeout: 20000
                speed: 20
                centerElement: true
                waitToSettleTimeoutMs: 1000

- extendedWaitUntil:
      visible:
          text: 'budgie \(E2E\)'
      timeout: 20000

- tapOn:
      text: 'budgie \(E2E\)'
      retryTapIfNoChange: true

- waitForAnimationToEnd

- retry:
      maxRetries: 3
      commands:
          - runFlow:
                when:
                    visible: 'Réessayer|Retry|Wiederholen|Reintentar|Повторити'
                commands:
                    - tapOn:
                          text: 'Réessayer|Retry|Wiederholen|Reintentar|Повторити'
                    - waitForAnimationToEnd
          - extendedWaitUntil:
                visible:
                    id: 'E2EFixtures, Folder'
                timeout: 8000

- extendedWaitUntil:
      visible:
          id: 'E2EFixtures, Folder'
      timeout: 20000

- tapOn:
      id: 'E2EFixtures, Folder'
      retryTapIfNoChange: true

- waitForAnimationToEnd
