appId: ${APP_ID}
---
- runFlow:
      when:
          notVisible:
              id: 'SettingsPage.Container'
      file: ../navigation/navigate-to-settings.flow.yaml

- extendedWaitUntil:
      visible:
          id: 'SettingsPage.Container'
      timeout: 15000

- scrollUntilVisible:
      element:
          id: 'SettingsPage.ImportDatabaseCard'
      direction: UP
      timeout: 10000
      centerElement: true
      waitToSettleTimeoutMs: 1000
      optional: true

- runFlow:
      when:
          notVisible:
              id: 'SettingsPage.ImportDatabaseCard'
      commands:
          - scrollUntilVisible:
                element:
                    id: 'SettingsPage.ImportDatabaseCard'
                direction: DOWN
                timeout: 20000
                centerElement: true
                waitToSettleTimeoutMs: 1000
          - waitForAnimationToEnd

- extendedWaitUntil:
      visible:
          id: 'SettingsPage.ImportDatabaseCard'
      timeout: 5000

- tapOn:
      id: 'SettingsPage.ImportDatabaseCard'
      retryTapIfNoChange: true
